tweaks for contributions

--- a/www/support/guidelines.html
+++ b/www/support/guidelines.html
@@ -1,9 +1,12 @@
 ---
-title: Contributions
+title: Guidelines
 layout: default
 redirect_from:
   - /support/specification.html
+  - /support/contribute.html
 ---
+
+<p>See the [contributing how-to](https://github.com/fileformat/vectorlogozone/blob/gh-pages/CONTRIBUTING.md) on github for how to contribute.</p>
 
 <h2>File/Directory naming guidelines</h2>
 
@@ -14,7 +17,7 @@ directory and logo handle should be <code>getbootstrap</code>.</p>
 
 <h2>Image guidelines</h2>
 
-<p>One of the key reasons for HackerLogos is a visually consistant look.  These are the guidelines for making images.</p>
+<p>One of the key reasons for VectorLogoZone is a visually consistant look.  These are the guidelines for making images.</p>
 
 <p>Detailed rules:</p>
 <ul>
