--- a/www/support/index.html
+++ b/www/support/index.html
@@ -61,7 +61,10 @@ redirect_from:
 <div class="row">
     <div class="col-md-12">
         <h3>How can I help?</h3>
-        <p><a href="contribute.html">Contribute</a>!</p>
+        <p>
+	   Contributions are welcome!  See the <a href="guidelines.html">image guidelines</a> and <a href="https://github.com/fileformat/vectorlogozone/blob/gh-pages/CONTRIBUTING.md">contributing how-to</a>.  
+	</p>
+	<p>Thanks in advance!</p>
     </div>
 </div>
 
@@ -87,7 +90,6 @@ redirect_from:
 	expect an immediate response.</p>
     </div>
 </div>
-http://caniuse.com/#search=img%20svg
 
 <!--
 <div class="row">
