--- a/www/support/guidelines.html
+++ b/www/support/guidelines.html
@@ -58,7 +58,7 @@ directory and logo handle should be <code>getbootstrap</code>.</p>
 	<hr/>
 {% endfor %}
 
-<h2><a name="template">Template</a></h2>
+<h2 id="template">Template</h2>
 
 <p>The text in the horizontal and wordmark versions should be 64px high.</p>
 
