--- a/www/index.html
+++ b/www/index.html
@@ -22,8 +22,9 @@ title: Consistant Vector Logos
     </div>
 </div>
 
+<div class="row">&nbsp;</div>
 {% assign sorted_pages = site.pages | sort:'sort' %}
-
+<div class="row">
 <div id="carousel-logos" class="carousel slide" data-ride="carousel">
 	<!-- Indicators -->
 		<ol class="carousel-indicators">
@@ -51,6 +52,8 @@ title: Consistant Vector Logos
 		<span class="sr-only">Next</span>
 	</a>
 </div>
+</div>
+<div class="row">&nbsp;</div>
 <style scoped="scoped" type="text/css">
 .pin-title { font-size:1em;text-decoration:none;color:#00a}
 .pin-description { color:#555; }
