fix for 404 on /util/index.html

--- a/www/index.html
+++ b/www/index.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 title: Consistant Vector Logos
+redirect_from:
+  - /util/index.html
 ---
 
 <p>I needed consistantly sized logos for one of <a href="http://www.regexplanet.com/">my recent projects</a>.  While Google Image Search is really quite good, I still had a lot of trouble finding images that were:</p>
