optional padding on visual inventory

--- a/www/logos/visual.html
+++ b/www/logos/visual.html
@@ -16,17 +16,25 @@ layout: default
 <div class="tab-content">
 {% for imagetype in site.data.imagetype %}
 	{% assign logocount = 0 %}
-	<div role="tabpanel" class="tab-pane logo-container vlz-tab-data" id="tab-data-{{ imagetype.id }}" {% if forloop.first %}{% else %}style="display:hidden;"{% endif %} >
+	<div role="tabpanel" class="tab-pane vlz-tab-data" id="tab-data-{{ imagetype.id }}" {% if forloop.first %}{% else %}style="display:hidden;"{% endif %} >
 
 		<p></p>
 
-		<div class="alert alert-info">{{ imagetype.description }}</div>
+		<div class="alert alert-info">{{ imagetype.description }}
+			<div class="pull-right">
 
-		<div id="vector{{ imagetype.id }}">
+<div class="btn-group pull-right" role="group" aria-label="Border">
+  <button type="button" class="btn btn-default btn-xs paddingbtn {% if imagetype.padding %}active{% endif %}" data-option="0" data-target="vector{{ imagetype.id }}" title="No padding"><img src="/images/visual/nopadding.svg" style="background-color:white;" /></button>
+  <button type="button" class="btn btn-default btn-xs paddingbtn {% if imagetype.padding == false %}active{% endif %}" data-option="1" data-target="vector{{ imagetype.id }}" title="Padding"><img src="/images/visual/padding.svg" style="background-color:white;" /></button>
+</div>
+			</div>
+		</div>
+
+		<div class="logo-container" id="vector{{ imagetype.id }}">
 
 		{% for logopage in sorted_pages %}{% if logopage.logohandle %}
 			{% capture logofile %}{{ logopage.logohandle }}-{{ imagetype.id }}.svg{% endcapture %}{% if logopage.images contains logofile %}
-				<a href="{{ logopage.url }}"><img alt="{{logopage.title}} {{imagetype.title}}" src="{{ logopage.logohandle }}/{{ logofile }}" {% if imagetype.padding %}style="padding:{{imagetype.padding}}"{% endif %}/></a>
+				<a href="{{ logopage.url }}"><img alt="{{logopage.title}} {{imagetype.title}}" class="{% if imagetype.padding == false %}padded{% endif %}" src="{{ logopage.logohandle }}/{{ logofile }}" /></a>
 				{% assign logocount = logocount | plus:1 %}
 			{% endif %}
 		{% endif %}{% endfor %}
@@ -73,6 +81,19 @@ layout: default
 	$(document).ready(function() {
 		switchTabs();
 		$(window).bind('hashchange', switchTabs);
+		$(".paddingbtn").click( function() {
+			console.log($("#" + $(this).attr("data-target") + " img"));
+			if ($(this).attr("data-option") == 0)
+			{
+				$("#" + $(this).attr("data-target") + " img").removeClass("padded");
+			}
+			else
+			{
+				$("#" + $(this).attr("data-target") + " img").addClass("padded");
+			}
+			$(this).siblings().removeClass("active");
+			$(this).addClass("active");		
+		});
 	});
 
 </script>
