--- a/www/search.html
+++ b/www/search.html
@@ -2,8 +2,7 @@
 layout: default
 ---
 
-<div class="container">
-<div class="row clearfix">
+<div class="row clearfix" style="padding-bottom:20px;">
     <div class="col-md-6 col-md-offset-3 column">
         <form action="get" class="form-inline" id="site_search">
             <div class="form-group">
@@ -13,69 +12,121 @@ layout: default
         </form>
     </div>
 </div>
+
+
+<div class="row clearfix">
+	<div class="logo-container" id="search_results"></div>
 </div>
-
-
-<div class="logo-container" id="search_results"></div>
 
 <script src="/js/lunr.min.js"></script>
 <script type="text/javascript">
 $(function() {
-  // Initalize lunr with the fields it will be searching on. I've given title
-  // a boost of 10 to indicate matches on this field are more important.
-  window.idx = lunr(function () {
-    this.field('id');
-    this.field('title', { boost: 10 });
-    this.field('author');
-    this.field('category');
-  });
+	// Initalize lunr with the fields it will be searching on. I've given title
+	// a boost of 10 to indicate matches on this field are more important.
+	window.idx = lunr(function () {
+			this.field('id');
+			this.field('title', { boost: 10 });
+			this.field('author');
+			this.field('category');
+		});
 
-  // Download the data from the JSON file we generated
-  window.data = $.getJSON('/util/fulltext.json');
+	// Download the data from the JSON file we generated
+	window.data = $.getJSON('/util/fulltext.json');
 
-  // Wait for the data to load and add it to lunr
-  window.data.then(function(loaded_data){
-    $.each(loaded_data, function(index, value){
-      window.idx.add(
-        $.extend({ "id": index }, value)
-      );
-    });
-  });
+	// Wait for the data to load and add it to lunr
+	window.data.then(function(loaded_data){
+		$.each(loaded_data, function(index, value){
+			window.idx.add($.extend({ "id": index }, value));
+		});
+	});
 
-  // Event when the form is submitted
-  $("#site_search").submit(function(){
-      var query = $("#q").val(); // Get the value for the text field
-	history.pushState({ "q": query}, "", "?q=" + query);
-      var results = window.idx.search(query); // Get lunr to perform a search
-	console.log(results);
-      display_search_results(results); // Hand the results off to be displayed
-	return false;
-  });
+	var doSearch = function(query)
+	{
+		if (!query || query.length == 0)
+		{
+			$("#search_results").empty();
+			return;
+		}
+		console.log("searching for " + query);
+		var results = window.idx.search(query);
+		display_search_results(query, results);
+		return false;
+	};
 
-  function display_search_results(results) {
-    var $search_results = $("#search_results");
+	$("#q").on('input propertychange paste', function() { 
+		console.log("input paste");
+		var query = $("#q").val();
+		history.pushState({ "q": query}, "", "?q=" + query);
+		doSearch(query);
+	});
 
-    // Wait for data to load
-    window.data.then(function(loaded_data) {
+	$("#q").on('xpropertychange', function() {
+		console.log("propertychange");
+		var query = $("#q").val();
+		doSearch(query);
+	});
 
-      // Are there any results?
-      if (results.length) {
-        $search_results.empty(); // Clear any old results
+	// Event when the form is submitted
+	$("#site_search").submit(function() {
+		doSearch($("#q").val());
+		return false;
+	});
 
-        // Iterate over the results
-        results.forEach(function(result) {
-          var item = loaded_data[result.ref];
+	$(window).on("popstate", function(event) {
+		console.log("popstate");
+		if (event.originalEvent.state)
+		{
+			var query = event.originalEvent.state["q"];
+			$("#q").val(query);
+			doSearch(query);
+		}
+		else
+		{
+			$("#q").val("");
+			$("#search_results").empty();
+		}
+	});
 
-          // Build a snippet of HTML for this result
-          var appendString = '<a href="/logos/' + result.ref + '/index.html"><img alt="' + item.title + '" src="/logos/' + result.ref + '/' + result.ref + '-ar21.svg" /></a></li>';
+	function getParameterByName(name) {
+		var match = RegExp('[?&]' + name + '=([^&]*)').exec(window.location.search);
+		return match && decodeURIComponent(match[1].replace(/\+/g, ' '));
+	}
 
-          // Add it to the results
-          $search_results.append(appendString);
-        });
-      } else {
-        $search_results.html('<li>No results found</li>');
-      }
-    });
-  }
+	var query = getParameterByName("q");
+	if (query && query.length)
+	{
+		$("q").val(query);
+		doSearch(query);
+	}
+
+
+	function display_search_results(query, results) {
+		var $search_results = $("#search_results");
+
+		// Wait for data to load
+		window.data.then(function(loaded_data) {
+
+			// Are there any results?
+			if (results.length) 
+			{
+				$search_results.empty(); // Clear any old results
+
+				// Iterate over the results
+				results.forEach(function(result) {
+						var item = loaded_data[result.ref];
+
+						// Build a snippet of HTML for this result
+						var appendString = '<a href="/logos/' + result.ref + '/index.html"><img title="' + item.title + '" src="/logos/' + result.ref + '/' + result.ref + '-ar21.svg" /></a></li>';
+
+						// Add it to the results
+						$search_results.append(appendString);
+					});
+			} 
+			else 
+			{
+				$search_results.html('<div class="alert alert-warning">No results found for "' + query + '"</div>');
+			}
+		});
+	}
 });
 </script>
