--- a/www/logos/visual.html
+++ b/www/logos/visual.html
@@ -24,8 +24,8 @@ layout: default
 			<div class="pull-right">
 
 <div class="btn-group pull-right" role="group" aria-label="Border">
-  <button type="button" class="btn btn-default btn-xs paddingbtn {% if imagetype.padding %}active{% endif %}" data-option="0" data-target="vector{{ imagetype.id }}" title="No padding"><img src="/images/visual/nopadding.svg" style="background-color:white;" /></button>
-  <button type="button" class="btn btn-default btn-xs paddingbtn {% if imagetype.padding == false %}active{% endif %}" data-option="1" data-target="vector{{ imagetype.id }}" title="Padding"><img src="/images/visual/padding.svg" style="background-color:white;" /></button>
+  <button type="button" class="btn btn-default btn-xs paddingbtn {% if imagetype.padding %}active{% endif %}" data-option="0" data-target="vector{{ imagetype.id }}" title="No padding"><img alt="" src="/images/visual/nopadding.svg" style="background-color:white;" /></button>
+  <button type="button" class="btn btn-default btn-xs paddingbtn {% if imagetype.padding == false %}active{% endif %}" data-option="1" data-target="vector{{ imagetype.id }}" title="Padding"><img alt="" src="/images/visual/padding.svg" style="background-color:white;" /></button>
 </div>
 			</div>
 		</div>
