tweak to tags page

--- a/www/logos/tags.html
+++ b/www/logos/tags.html
@@ -9,7 +9,8 @@ title: Logos by Tag
     <div class="panel-heading" role="tab" id="headingOne">
       <h4 class="panel-title">
         <a role="button" class="collapsed" href="#{{tag[0]}}" id="header{{tag[0]}}" aria-expanded="true" aria-controls="collapse{{tag[0]}}">
-          {{tag[1]["title"]}} ({{tag[1]["count"]}})
+          {{tag[1]["title"]}}
+          <span class="badge badge-info pull-right">{{tag[1]["count"]}}</span>
         </a>
       </h4>
     </div>
