logo index page reorg

--- a/www/logos/index.html
+++ b/www/logos/index.html
@@ -14,6 +14,6 @@ redirect_from: /all.html
 
 <div class="row">
 	<div class="col-md-12">
-		<div class="alert alert-info">You can also see the <a href="inventory.html">complete list of logos</a> that includes all variations.</div>
+		<div class="alert alert-info">More <a href="links.html">lists of logos</a> available here, including the <a href="inventory.html">complete visual inventory of available logos</a> (WARNING: lots of images).</div>
 	</div>
 </div>
