--- a/www/logos/metadata.html
+++ b/www/logos/metadata.html
@@ -2,6 +2,8 @@
 title: Available Metadata
 layout: default
 ---
+<p>I try to include links to the various websites for each logo.  This is a report of those links</p>
+
 {% assign sorted_pages = site.pages | sort:'sort' %}
 {% capture checkon %}<i class="fa fa-check"></i>{% endcapture %}
 {% capture checkoff %}<i class="fa fa-fw"></i>{% endcapture %}
@@ -15,7 +17,7 @@ layout: default
 			<th style="text-align:center">Blog</th>
 			<th style="text-align:center">Facebook</th>
 			<th style="text-align:center">Github</th>
-			<th>Twitter</th>
+			<th style="text-align:center">Twitter</th>
 			<th style="text-align:center">Website</th>
 			<th style="text-align:center">Wikipedia</th>
 		</tr>
