--- a/www/logos/missing.html
+++ b/www/logos/missing.html
@@ -6,13 +6,15 @@ noindex: true
 <p>In theory, every logo should have at least the icon and rectangular versions.  This is the list of logos that don't have both.</p>
 
 {% assign sorted_pages = site.pages | sort:'sort' %}
+{% assign logocount = 0 %}
+
 <table class="table table-striped table-bordered">
   	<thead>
 		    <tr>
-			       <th>ID</th>
-             <th>Name</th>
-             <th>Icon</th>
-             <th>Rectangle</th>
+			<th>ID</th>
+            <th>Name</th>
+            <th>Icon</th>
+            <th>Rectangle</th>
         </tr>
     </thead>
     <tbody>
@@ -21,7 +23,7 @@ noindex: true
         {% capture logoar21 %}{{ logopage.logohandle }}{{ '-ar21.svg' }}{% endcapture %}
         {% capture logoicon %}{{ logopage.logohandle }}{{ '-icon.svg' }}{% endcapture %}
         {% if logopage.images contains logoar21 and logopage.images contains logoicon %}
-        {% else %}
+        {% else %}{% assign logocount = logocount | plus:1 %}
         <tr>
             <td><a href="{{logopage.url}}">{{logopage.logohandle}}</a></td>
             <td>{{logopage.title}}</td>
@@ -33,3 +35,5 @@ noindex: true
 {% endfor %}
     </tbody>
 </table>
+
+<p>{{ logocount }} logos with something missing</p>
