more logo placeholders

--- a/www/search.html
+++ b/www/search.html
@@ -8,7 +8,7 @@ layout: default
             <div class="form-group">
                  <label class="sr-only" for="q">Search query</label><input autocomplete="off" autofocus="autofocus" class="form-control" id="q" name="q" placeholder="Search terms" type="text">
             </div>
-		<button type="submit" class="btn btn-default">Search</button>
+		<button type="submit" class="btn btn-primary">Search</button>
         </form>
     </div>
 </div>
