--- a/www/index.html
+++ b/www/index.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title: Consistant Vector Logos
+title: Consistent SVG Vector Logos
 redirect_from:
   - /util/index.html
 ---
 
-<p>I needed consistantly sized logos for one of <a href="http://www.regexplanet.com/">my recent projects</a>.  While Google Image Search is really quite good, I still had a lot of trouble finding images that were:</p>
+<p>I needed consistently sized logos for one of <a href="http://www.regexplanet.com/">my recent projects</a>.  While Google Image Search is really quite good, I still had a lot of trouble finding images that were:</p>
 
 <ul>
 	<li>svg format</li>
