--- a/www/support/index.html
+++ b/www/support/index.html
@@ -10,7 +10,7 @@ redirect_from:
         <h3>Can I use these images without royalties/attribution/etc?  Do you even have the authority to grant me such rights?</h3>
 	<p>I am not the copyright/trademark/etc owner of any of these.  Use them at your own risk.</p>
 	<p>If you are the owner and do not want your logo here, please let me know (nicely) and I will be glad to remove it.  
-	No lawyers necessary: just <a href="https://github.com/fileformat/hackerlogos/issues/new">submit an issue</a> on github! 
+	No lawyers necessary: just <a href="https://github.com/fileformat/vectorlogozone/issues/new">submit an issue</a> on github!
 	Just so you know: I am usually using them on a credits page (<a href="http://www.numberplanet.com/support/credits.html">example</a>), so it might be in your best interests to let me slide.  
 	Alternatively, it would be great if you provided the appropriately sized images yourself.</p>
     </div>
@@ -21,15 +21,6 @@ redirect_from:
         <h3>Can I hotlink the images, or do I have to make my own copy?</h3>
         <p>I originally wasn't going to allow hotlinking, but CloudFlare promises unlimited free bandwidth, so I changed my
 	   mind.  Unless CloudFlare changes their mind, hotlink away!</p>
-    </div>
-</div>
-
-<div class="row">
-    <div class="col-md-12">
-        <h3>These images suck!  Can't you do any better?</h3>
-        <p>I am definitely <i>not</i> an artist, and generally do not do anything besides resize and rearrange existing artwork.</p>
-	<p>It can often be difficult to get the images to looks nice on their own and look good and consistant with the rest of the images.</p>
-	<p>(and see the next question!)</p>
     </div>
 </div>
 
@@ -50,11 +41,27 @@ redirect_from:
 
 <div class="row">
     <div class="col-md-12">
+        <h3>How reliable is the site?  Can I count on it to be up all the time?</h3>
+        <p>It is a static site, so it should be completely reliable.  You can check the <a href="https://nodeping.com/reports/checks/wbe44oj5-13fx-4h6l-8ojp-tlbno9b01gmu">recent uptime report</a> to see for yourself!</p>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-md-12">
         <h3>But I really want to support IE8!</h3>
         <p>I have seen several different ways: <a href="https://css-tricks.com/a-complete-guide-to-svg-fallbacks/">picture, image</a> and <a href="http://www.sitepoint.com/graceful-fallback-svgs-old-ie/">onerror</a>.</p>
 	<p>I implemented the <code>onerror</code> method on the <a href="/logos/index.html">logo list page</a>, but I am too lazy to get IE8 to test, so
 	   I have no idea if it works.  If it does, please <a href="contact.html">let me know</a>!
 	</p>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-md-12">
+        <h3>These images suck!  Can't you do any better?</h3>
+        <p>I am definitely <i>not</i> an artist, and generally do not do anything besides resize and rearrange existing artwork.</p>
+        <p>It can often be difficult to get the images to looks nice on their own and look good and consistant with the rest of the images.</p>
+        <p>(and see the next question!)</p>
     </div>
 </div>
 
